Fixed /account/add_payee and /account/claim_recipient form buttons alignment.

--- a/website/apwan/static/apwan/templates/account/base.css
+++ b/website/apwan/static/apwan/templates/account/base.css
@@ -24,6 +24,12 @@
 }
 
 
+.account-body .form-actions .btn
+{
+    margin-right: 10px;
+}
+
+
 .account-menu-span
 {
     padding: 8px 0;
